--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -7,16 +7,24 @@
 div.comment{
 	width: 200px;
 	height:50px;
-	border: 1px solid black;
-	text-align: center;
-	padding-top: 10px;
-	margin: 0 auto;
-	background-color: white;
+	// margin: 0 auto;
+
+	color: purple; 
+	border-width: 3px;
+	border-style: solid;
+	border-color: #00aedb;
+	border-radius: 6px;
+	padding: 5px;
+	padding-left: 10px;
+	font-family: arial;
+	margin: 5px;
+	margin-left: 0px;
 }
 
 div#main {
 	float: left;
-	border: 1px solid black;
-	background-color: gray;
-	
+	background-color: #CCFF66;
+	color: #333333;
+	font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
+	margin: 5px;
 }
