--- a/app/assets/stylesheets/destinations.css.scss
+++ b/app/assets/stylesheets/destinations.css.scss
@@ -4,17 +4,18 @@
 
 
 #map-canvas {
-	height: 1000px;
-	width: 1000px;
-	border: 1px solid black;
+	height: 300px;
+	width: 500px;
+	border: 4px solid #0099cc;
 	margin: 0 auto;
 	
 }
 
-.destinations{
-	height: 50px;
-	width: 100px;
+.destinations {
+	height: 200px;
+	width: 250px;
 	border: 1px solid black;
 	background-color: white;
-	
+	float: left;
 }
+
