--- a/app/views/todo_items/_form.html.erb
+++ b/app/views/todo_items/_form.html.erb
@@ -1,25 +1,23 @@
-
-
-
-
-
-
 <div class = "todo_form">
 
-		<h3>New To Do</h3>
-<%= form_for(TodoItem.new, :remote => true) do |f| %>
+		<h3>Create a To-Do Item</h3>
+<%= form_for(TodoItem.new(:destination_id => destination_id), :remote => true) do |f| %>
+
+
+
+		<%= f.hidden_field :destination_id %>
 
 
 
 
 <div class = "field">
-<p>Name</p>
+<p>Name your goal: <BR>
 		<%= f.text_field :name %>
 
 </div>
 
 <div class = "field">
-	<p>Location</p>
+	<p>Address or landmark:
 		<%= f.text_field :location %>
 
 </div>
@@ -27,9 +25,9 @@
 		<%= f.submit  %>
 
 </div>
+<br/>
 
 <% end %>
 
 
 </div>
-<br/>
