--- a/app/views/todo_items/_todo_item.html.erb
+++ b/app/views/todo_items/_todo_item.html.erb
@@ -1,16 +1,9 @@
-
-
-	<div class = "todo_items <% todo_item.completed? ? 'completed' : '' %>">
-		<h2><%= todo_item.name %></h2>
-		
- 	
-	</div>
+<div class = "todo_items<%=todo_item.destination_id%> <% todo_item.completed? ? 'completed' : '' %>">
+<h2 id="todotitle"><%= todo_item.name %></h2>
 
 	<div class = "info">
 		<%= distance_of_time_in_words(todo_item.created_at) %>
 	</div>
-
-	
 
 <div class="comments-<%=todo_item.id%>">
 <% todo_item.comments.each do |comment| %>
@@ -22,5 +15,4 @@
 <%= render :partial => 'comments/form', :locals => { :item => todo_item } %>
 
 
-
-
+</div>
