--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,8 +1,8 @@
 
-
+<BR>
 <div class = "new-comment">
 
-	<h3>New Comment</h3>
+	<h3>Add Comment</h3>
 
 
 <%= form_for(Comment.new(:todo_item_id => item.id), :remote => true) do |f| %>
