--- a/app/views/todo_items/_todo_item.html.erb
+++ b/app/views/todo_items/_todo_item.html.erb
@@ -1,8 +1,10 @@
 <div class = "todo_items<%=todo_item.destination_id%> <% todo_item.completed? ? 'completed' : '' %>">
 <h2 id="todotitle"><%= todo_item.name %></h2>
+<h4 id="todolocation">@ <%= todo_item.location %></h4>
+
 
 	<div class = "info">
-		<%= distance_of_time_in_words(todo_item.created_at) %>
+		<i><%= distance_of_time_in_words(todo_item.created_at) %> ago </i>
 	</div>
 
 <div class="comments-<%=todo_item.id%>">
