--- a/app/assets/stylesheets/destinations.css.scss
+++ b/app/assets/stylesheets/destinations.css.scss
@@ -4,11 +4,16 @@
 
 
 #map-canvas {
-	height: 300px;
-	width: 500px;
+	height: 700px;
+	width: 550px;
 	border: 4px solid #0099cc;
 	margin: 0 auto;
+	float: right;
 	
+}
+
+#form_map {
+	padding-right: 20px;
 }
 
 .destinations {
