--- a/app/views/todo_items/_form.html.erb
+++ b/app/views/todo_items/_form.html.erb
@@ -1,12 +1,13 @@
 <div class = "todo_form">
 
-		<h3>Create a To-Do Item</h3>
+		<h3 id="createtodo">Create a To-Do Item</h3>
+
+		<div id="todoforms">
 <%= form_for(TodoItem.new(:destination_id => destination_id), :remote => true) do |f| %>
 
 
 
 		<%= f.hidden_field :destination_id %>
-
 
 
 
@@ -28,6 +29,6 @@
 <br/>
 
 <% end %>
-
+</div>
 
 </div>
