--- a/app/assets/stylesheets/todo_items.css.scss
+++ b/app/assets/stylesheets/todo_items.css.scss
@@ -4,12 +4,14 @@
 
 
 .todo_form {
-	border-left: 1px dotted #cc9999;
-	border-right: 1px dotted #cc9999;
+
 	width: 290px;
 	float: center;
 	background-color: white;
-	margin: 5px auto;
+
+}
+
+#entiretodo {
 
 }
 
@@ -18,15 +20,19 @@ font-family: Futura, "Trebuchet MS", Arial, sans-serif;
 font-size: 1.1em;
 width: 82%;
 background-color: #ffff99;
-padding: 7px;
 font-style: italic;
 
 }
 
+hr {
+	height: 1px;
+	color: black;
+	width: 85%;
+
+}
+
 .field {
-	text-align: left;
-	margin: 10px;
-	margin-left: 20px;
+text-align: left;
 font-family: "Franklin Gothic Medium", "Franklin Gothic", "ITC Franklin Gothic", Arial, sans-serif;
 font-size: 0.9em;
 }
@@ -34,8 +40,10 @@ font-size: 0.9em;
 #todotitle {
 	background-color: #ccffff;
 	font-family: "Franklin Gothic Medium", "Franklin Gothic", "ITC Franklin Gothic", Arial, sans-serif;
-	margin-left: 10px;
-	margin-right: 10px;
+	width: 270px;
+	margin-left: 20px;
+	margin-right: 20px;
+
 }
 
 #todolocation {
@@ -43,6 +51,12 @@ font-size: 0.9em;
 	color: #333366;
 	position: relative;
 	top: -17px;
-
+	background-color: #ccffff;
 	text-align: center;
+	margin-left: 20px;
+	margin-right: 20px;
+}
+
+.new_todo_item {
+	display: none;
 }
