--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -2,16 +2,16 @@
 <BR>
 <div class = "new-comment">
 
-	<h3>Add Comment</h3>
+	<h3 id="addcomment">Add Comment</h3>
 
-
+	
 <%= form_for(Comment.new(:todo_item_id => item.id), :remote => true) do |f| %>
 
 
 <%=  f.hidden_field :todo_item_id %>
 
 <div class = "field">
-		<%= f.text_area :body %>
+		<%= f.text_area :body, :rows => 5 %>
 
 </div>
 <div class = "field">
