--- a/app/views/todo_items/_todo_item.html.erb
+++ b/app/views/todo_items/_todo_item.html.erb
@@ -1,20 +1,25 @@
-<div class = "todo_items<%=todo_item.destination_id%> <% todo_item.completed? ? 'completed' : '' %>">
+<div id="entiretodo">
+<div class = "todo_items" data-comment-id="<%= todo_item.destination_id %>"
+	"<% todo_item.completed? ? 'completed' : '' %>">
+	<hr>
 <h2 id="todotitle"><%= todo_item.name %></h2>
 <h4 id="todolocation">@ <%= todo_item.location %></h4>
 
 
-	<div class = "info">
-		<i><%= distance_of_time_in_words(todo_item.created_at) %> ago </i>
-	</div>
 
 <div class="comments-<%=todo_item.id%>">
+	<h4 id="commenti">(click me for comments)</h4> 
+	<div id="displaycomments">
 <% todo_item.comments.each do |comment| %>
 
 <%= render comment %>
 <% end %>
-</div>
 
+
+</div>
 <%= render :partial => 'comments/form', :locals => { :item => todo_item } %>
 
-
 </div>
+</div>
+</div>
+<BR>
