--- a/app/views/todo_items/index.html.erb
+++ b/app/views/todo_items/index.html.erb
@@ -8,33 +8,14 @@
 
 
 
-
-<script type = "text/javascript" src= "https://maps.googleapis.com/maps/api/js?key=AIzaSyC74gnSe7p17ulcZUzgPJHxYurGg2bjRYg&sensor=false">
-</script>
-
-<script>
-function initialize() {
-        var mapOptions = {
-          center: new google.maps.LatLng(40.7399977, -73.9900976),
-          zoom: 14,
-          mapTypeId: google.maps.MapTypeId.ROADMAP
-        };
-        var map = new google.maps.Map(document.getElementById("map-canvas"),
-            mapOptions);
-         var marker = new google.maps.Marker({
-          position: new google.maps.LatLng(40.7399977, -73.9900966),
-          map: map,
-          title: "hello world"
-       });
-        //     <% TodoItem.all.each do |item| %>
-        // addMarker(<%=item.latitude%>, <%=item.longitude%>, '<%=item.name%>');
-        // <%end %>
-     
-      }
-      google.maps.event.addDomListener(window, 'load', initialize);
+<div id="search-box"> 
+<input type="text" id="search" placeholder="Enter a search term">
+</div>
+<p> 
 
 
-</script>
+
+
 
 <div id = "form_map">
 
