Add sortable but doesn't stick to its new place

--- a/app/assets/stylesheets/todo_items.css.scss
+++ b/app/assets/stylesheets/todo_items.css.scss
@@ -8,7 +8,7 @@
 	width: 290px;
 	float: center;
 	background-color: white;
-
+	margin-left: 10px;
 }
 
 #entiretodo {
@@ -35,6 +35,7 @@ hr {
 text-align: left;
 font-family: "Franklin Gothic Medium", "Franklin Gothic", "ITC Franklin Gothic", Arial, sans-serif;
 font-size: 0.9em;
+margin-left: 10px;
 }
 
 #todotitle {
