--- a/app/views/todo_items/_form.html.erb
+++ b/app/views/todo_items/_form.html.erb
@@ -1,6 +1,7 @@
 <div class = "todo_form">
 
-		<h3 id="createtodo">Create a To-Do Item</h3>
+		<h3 id="createtodo">Create a To-Do Item
+		</h3>
 
 		<div id="todoforms">
 <%= form_for(TodoItem.new(:destination_id => destination_id), :remote => true) do |f| %>
