--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -4,13 +4,14 @@
 
 	<h3 id="addcomment">Add Comment</h3>
 
-	
+<div id="addc">
+
 <%= form_for(Comment.new(:todo_item_id => item.id), :remote => true) do |f| %>
 
 
 <%=  f.hidden_field :todo_item_id %>
 
-<div class = "field">
+<div class = "field" id="commentfield">
 		<%= f.text_area :body, :rows => 5 %>
 
 </div>
@@ -19,7 +20,9 @@
 
 </div>
 
+
 <% end %>
+</div>
 
 
 </div>
