--- a/app/views/todo_items/_todo_item.html.erb
+++ b/app/views/todo_items/_todo_item.html.erb
@@ -1,14 +1,14 @@
+<div class="sortable">
 <div id="entiretodo">
 <div class = "todo_items" data-comment-id="<%= todo_item.destination_id %>"
 	"<% todo_item.completed? ? 'completed' : '' %>">
-	<hr>
+
+
 <h2 id="todotitle"><%= todo_item.name %></h2>
 <h4 id="todolocation">@ <%= todo_item.location %></h4>
 
 
-
 <div class="comments-<%=todo_item.id%>">
-	<h4 id="commenti">(click me for comments)</h4> 
 	<div id="displaycomments">
 <% todo_item.comments.each do |comment| %>
 
@@ -16,9 +16,11 @@
 <% end %>
 
 
-</div>
 <%= render :partial => 'comments/form', :locals => { :item => todo_item } %>
 
+
+</div>
+</div>
 </div>
 </div>
 </div>
