Add user and likes model, associations, like button

--- a/app/assets/stylesheets/todo_items.css.scss
+++ b/app/assets/stylesheets/todo_items.css.scss
@@ -47,6 +47,10 @@ margin-left: 10px;
 
 }
 
+a.likebutton {
+	padding-left: 10px;
+}
+
 #todolocation {
 	font-family: Perpetua, Baskerville, "Big Caslon", "Palatino Linotype", Palatino, "URW Palladio L", "Nimbus Roman No9 L", serif;
 	color: #333366;
