--- a/app/views/todo_items/_todo_item.html.erb
+++ b/app/views/todo_items/_todo_item.html.erb
@@ -5,7 +5,7 @@
 
 
 <h2 id="todotitle"><%= todo_item.name %></h2>
-<h4 id="todolocation">@ <%= todo_item.location %></h4>
+<h4 id="todolocation">@ <%= todo_item.location %> <%= link_to image_tag('like.png'), like_todo_item_path(todo_item.id), {:class => 'likebutton'}, :remote => :true, :method => :post %></h4>
 
 
 <div class="comments-<%=todo_item.id%>">
